[package]
name = "sizes"
version = "0.0.1"
edition = "2024"
authors = ["markhenry.liwag@gmail.com"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }